Sorted spacing and fixed units issue

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14,10 +14,38 @@ body,html {
 input[type='range'] {
 	width:75%;
 	margin:0 12.5%;
-    -webkit-appearance:none !important;
-    background:rgba(0,0,0,0.9);
+	-webkit-appearance:none !important;
+	background:rgba(0,0,0,0.9);
 	border:#666 1px solid;
-    height:3px;
+	height:3px;
+}
+input[type=range]::-webkit-slider-thumb{
+	box-shadow:4px 4px 15px rgba(0,0,0,0.5), 0px 0px 4px rgba(13,13,13,0.5);
+	border:0px solid rgba(0,0,0,0);
+	height:15px;
+	width:25px;
+	border-radius:0px;
+	background:#ffffff;
+	cursor:pointer;
+	-webkit-appearance:none;
+}
+input[type=range]::-moz-range-thumb {
+	box-shadow:4px 4px 15px rgba(0,0,0,0.5), 0px 0px 4px rgba(13,13,13,0.5);
+	border:0px solid rgba(0,0,0,0);
+	height:15px;
+	width:25px;
+	border-radius:0px;
+	background:#ffffff;
+	cursor:pointer;
+}
+input[type=range]::-ms-thumb {
+	box-shadow:4px 4px 15px rgba(0,0,0,0.5), 0px 0px 4px rgba(13,13,13,0.5);
+	border:0px solid rgba(0,0,0,0);
+	height:15px;
+	width:25px;
+	border-radius:0px;
+	background:#ffffff;
+	cursor:pointer;
 }
 .clickable {
 	cursor:pointer;
@@ -27,7 +55,7 @@ input[type='range'] {
 	z-index:15;
 	position:fixed;
 	top:0;
-	height:7.5vh;
+	height:7.5%;
 	width:100%;
 	background-color:rgba(255,255,255,0.95);
 }
@@ -35,8 +63,8 @@ input[type='range'] {
 	position:fixed;
 	overflow-y:scroll;
 	-webkit-overflow-scrolling:touch;
-	top:7.5vh;
-	bottom:12.5vh;
+	top:7.5%;
+	bottom:12.5%;
 	width:100%;
 	background-color:rgba(0,0,0,0.8);
 	color:white;
@@ -45,7 +73,7 @@ input[type='range'] {
 	z-index:15;
 	position:fixed;
 	bottom:0;
-	height:12.5vh;
+	height:12.5%;
 	width:100%;
 	background-color:rgba(255,255,255,0.95);
 }
@@ -122,38 +150,38 @@ input[type='range'] {
 #search_box {
 	display:inline-block;
 	width:75%;
-    height:1.5em;
-    padding:6px 12px;
-    font-size:14px;
-    line-height:1em;
-    color:#555;
-    background-color:#fff;
-    border:1px solid #000;
+	height:1.5em;
+	padding:6px 12px;
+	font-size:14px;
+	line-height:1em;
+	color:#555;
+	background-color:#fff;
+	border:1px solid #000;
 	border-radius:0;
-    -webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow:inset 0 1px 1px rgba(0,0,0,.075);
-    -webkit-transition:border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-    -o-transition:border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition:border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075);
+	box-shadow:inset 0 1px 1px rgba(0,0,0,.075);
+	-webkit-transition:border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+	-o-transition:border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	transition:border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 #do_search,.oButton {
 	background-color:rgba(0,0,0,0.5);
-    color:#fff !important;
+	color:#fff !important;
 	transition:background-color 0.2s ease-in-out;
-    border:0;
-    border-radius:0;
-    cursor:pointer;
-    display:inline-block;
-    font-family:Helvetica, sans-serif;
-    font-weight:500;
-    height:2.6em;
-    width:7.5vw;
-    line-height:2.75em;
-    padding:0 .5vw 0 .5vw;
-    text-align:center;
-    text-decoration:none;
-    text-transform:uppercase;
-    white-space:nowrap;
+	border:0;
+	border-radius:0;
+	cursor:pointer;
+	display:inline-block;
+	font-family:Helvetica, sans-serif;
+	font-weight:500;
+	height:2.6em;
+	width:7.5vw;
+	line-height:2.75em;
+	padding:0 .5vw 0 .5vw;
+	text-align:center;
+	text-decoration:none;
+	text-transform:uppercase;
+	white-space:nowrap;
 }
 #do_search:hover {
 	background-color:rgba(0,0,0,0.9);
@@ -173,7 +201,7 @@ input[type='range'] {
 	width:95vw;
 }
 #pageCenter::-webkit-scrollbar { 
-    display:none; 
+	display:none; 
 }
 
 .tile {
@@ -318,9 +346,6 @@ table tbody td {
 		width:33.333%;
 		height:45vh;
 	}
-	#pageCenter {
-		height:76.5vh;
-	}
 	#sAlert .container {
 		height:20vh;
 		width:17.5vw;
@@ -355,9 +380,6 @@ table tbody td {
 		width:90vw;
 		line-height:7.5vh;
 		font-size:1.9em;
-	}
-	#pageCenter {
-		height:77.5vh;
 	}
 	#sAlert .container {
 		height:20vh;
@@ -404,19 +426,18 @@ table tbody td {
 	}
 	#pageTop {
 		display:block;
-		bottom:12.5vh;
-		height:15vh;
+		height:15%;
 	}
 	#pageCenter {
 		display:block;
 		top:15vh;
-		height:72.5vh;
-		bottom:12.5vh;
-		margin-bottom:12.5vh;
+		height:73%;
+		bottom:12%;
+		margin-bottom:12%;
 	}
 	#pageBottom {
 		display:block;
-		height:12vh;
+		height:12%;
 	}
 	#folder {
 		float:right;
@@ -450,10 +471,10 @@ table tbody td {
 		font-size:1.25em;
 	}
 	#pageTop {
-		height:17.5vh;
+		height:17.5%;
 	}
 	#pageCenter {
 		top:17.5vh;
-		height:70vh;
+		height:68%;
 	}
 }
